feat: update test

--- a/scripts/templates/Dockerfile
+++ b/scripts/templates/Dockerfile
@@ -3,10 +3,10 @@ FROM {{IMAGE_FROM}}
 WORKDIR /opt
 
 COPY build/service /opt/service
-COPY config/app-sample.toml /opt/config/app.toml
+COPY config/app-sample.yaml /opt/config/app.yaml
 
 EXPOSE 10080/tcp
 EXPOSE 10081/tcp
 
 ENTRYPOINT [ "/opt/service" ]
-CMD [ "--config", "/opt/config/app.toml" ]
+CMD [ "--config", "/opt/config/app.yaml" ]
