ci: update test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,6 @@ jobs:
           ARCH="amd64"
           sudo curl -L --remote-name-all https://dl.k8s.io/release/${RELEASE}/bin/linux/${ARCH}/kubeadm
           sudo chmod +x kubeadm
-          sudo IMGS=$(./kubeadm config images list)
-          sudo for i in ${IMGS}; do echo $i; done
+          IMGS=$(./kubeadm config images list)
+          for i in ${IMGS}; do echo $i; done
       - run: sudo ./kubeadm config images list
