--- a/scripts/templates/kubernetes/service/ingresses.yaml
+++ b/scripts/templates/kubernetes/service/ingresses.yaml
@@ -4,17 +4,17 @@ kind: Ingress
 metadata:
   #annotations:
   #  nginx.ingress.kubernetes.io/proxy-body-size: 10m
-  name: mingqing-apilogin-v1
+  name: _APPNAME_
 spec:
   ingressClassName: nginx
   rules:
-  - host: mingqing-apilogin-v1.biz-DEPLOY_ENV-NAMESPACE.api.grpc-kit.com
+  - host: _APPNAME_._KUBERNETES_NAMESPACE_._KUBERNETES_CLUSTER_DOMAIN_
     http:
       paths:
       - path: /
         backend:
           service:
-            name: mingqing-apilogin-v1
+            name: _APPNAME_
             port:
               number: 10080
         pathType: Prefix
