--- a/deploy/kubernetes/dev/service/ingresses.yaml
+++ b/deploy/kubernetes/dev/service/ingresses.yaml
@@ -6,7 +6,7 @@ metadata:
   #  nginx.ingress.kubernetes.io/proxy-body-size: 10m
   name: mingqing-apilogin-v1
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: mingqing-apilogin-v1.biz-dev-uptime.fake.dev.173ops.com
     http:
